--- a/public/cs394n/index.html
+++ b/public/cs394n/index.html
@@ -946,7 +946,7 @@ I am a first-year Neuroscience PhD student currently rotating with Robbe Goris. 
 <p>Potential topics I&rsquo;d be interested in working on are:</p>
 <ul>
 <li>Computational vision (e.g., neural network models of the visual system)</li>
-<li>Computational neuroscience in the broadest sense</li>
+<li>Computational neuroscience (in the broadest sense)</li>
 <li>Spiking neural networks</li>
 <li>Reinforcement learning</li>
 <li>Parameter estimation (just a rough idea, not sure about it myself yet)</li>
